# ZeroToDiffusion

./: .gitignore  README.md  diffusion-models-learning-plan.md  pyproject.toml
01-foundations/: generative-models-landscape.md  probability-review.md
01-foundations/notebooks/: gaussian_basics.ipynb  kl_divergence_demo.ipynb
02-before-diffusion/vae/: README.md  vae_mnist.py
