[project]
name = "zerotodiffusion"
version = "0.1.0"
description = "From pure noise to deep understanding — a hands-on journey through diffusion models"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.0,<2.3",
    "torchvision>=0.15,<0.18",
    "matplotlib>=3.7",
    "numpy>=1.24,<2",
    "scipy>=1.10,<1.14",
    "tqdm>=4.65",
    "Pillow>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["02-before-diffusion"]

[tool.uv]
python-preference = "only-system"
